[package]
name = "Probabilistic_Chained_Blockchain_Consensus"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["shared", "simplex",
    #"keygen-pkcs8"
]

[lib]
name = "shared"
path = "shared/src/lib.rs"

[[bin]]
name = "simplex"
path = "simplex/src/main.rs"

#[[bin]]
#name = "keygen-pkcs8"
#path = "keygen-pkcs8/src/main.rs"

[dependencies]
chrono = "0.4.38"
csv = "1.3.1"
toml = "0.8.19"
base64 = "0.22.1"
tokio = { version = "1.40.0", features = ["time", "rt", "rt-multi-thread", "macros", "net", "sync", "io-util", "fs", "tracing"] }
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.9.1"
serde_json = "1.0.132"
time = "0.3.36"
sha2 = "0.11.0-pre.4"
log = "0.4"
env_logger = "0.11"
bincode = "1.3"
rayon = "1.8"
console-subscriber = "0.4.1"
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
