[package]
name = "simplex"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
chrono = "0.4.38"
csv = "1.3.1"
toml = "0.8.19"
base64 = "0.22.1"
ring = "0.17.8"
tokio = { version = "1.40.0", features = ["time", "rt", "rt-multi-thread", "macros", "net", "sync", "io-util", "fs", "tracing"] }
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.9.0-alpha.2"
serde_json = "1.0.132"
sha2 = "0.11.0-pre.4"
log = "0.4"
env_logger = "0.11"
bincode = "1.3"
rayon = "1.8"
console-subscriber = "0.4.1"
futures = "0.3.31"